--- a/ledis/package.json
+++ b/ledis/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview --port 5050"
   },
   "dependencies": {
+    "crypto-js": "^4.1.1",
     "vue": "^3.2.33"
   },
   "devDependencies": {
